--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,18 @@
 /*  your css code here. If applicable */
 .container {
 	display: flex;
+	border-top:2px;
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
 }
 
 .box {
-  background-color: lightblue;
 	color:purple;
+	background-color: lightblue;
 	font-size:10px;
 	display:inline-block;
-  border: 2px solid black;
-  padding: 20px;
-  text-align: center;
+	border: 2px solid black;
+	padding: 20px;
+	text-align: center;
 }
