--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,10 @@
 /*  your css code here. If applicable */
 .container {
-	display: flex;
-	border-top:2px;
-	justify-content: center;
+/* 	display: flex; */
+/* 	border-top:2px; */
+/* 	justify-content: center; */
 	align-items: center;
-	height: 100vh;
-}
-
-.box {
+/* 	height: 100vh; */
 	color:purple;
 	background-color: lightblue;
 	font-size:10px;
@@ -15,4 +12,8 @@
 	border: 2px solid black;
 	padding: 20px;
 	text-align: center;
+}
+
+.box {
+
 }
